# bilingual-subtitle-studio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
subtitle_tool/: __init__.py  cli.py  gui.py
